--- a/config.yaml
+++ b/config.yaml
@@ -9,65 +9,63 @@ parsers:
     file: ./parsers/products_reviews.rb
     disabled: false
 exporters:
+  - exporter_name: products_json
+    exporter_type: json
+    collection: products
+    write_mode: pretty_array
   - exporter_name: products_csv
     exporter_type: csv
     collection: products
     fields:
-      - header: "EXTRACTED_ON"
-        path: "EXTRACTED_ON"
-      - header: "GEOGRAPHY_NAME"
-        path: "GEOGRAPHY_NAME"
-      - header: "IS_AVAILABLE"
-        path: "IS_AVAILABLE"
-      - header: "PRODUCT_BRAND"
-        path: "PRODUCT_BRAND"
-      - header: "PRODUCT_DESCRIPTION"
-        path: "PRODUCT_DESCRIPTION"
-      - header: "PRODUCT_ID"
-        path: "PRODUCT_ID"
-      - header: "PRODUCT_ITEM_QTY_IN_PACK"
-        path: "PRODUCT_ITEM_QTY_IN_PACK"
-      - header: "PRODUCT_ITEM_SIZE"
-        path: "PRODUCT_ITEM_SIZE"
-      - header: "PRODUCT_ITEM_SIZE_UOM"
-        path: "PRODUCT_ITEM_SIZE_UOM"
-      - header: "PRODUCT_MAIN_IMAGE_URL"
-        path: "PRODUCT_MAIN_IMAGE_URL"
-      - header: "PRODUCT_NAME"
-        path: "PRODUCT_NAME"
-      - header: "PRODUCT_NBR_OF_REVIEWS"
-        path: "PRODUCT_NBR_OF_REVIEWS"
-      - header: "PRODUCT_PAGE"
-        path: "PRODUCT_PAGE"
-      - header: "PRODUCT_RANK"
-        path: "PRODUCT_RANK"
-      - header: "PRODUCT_STAR_RATING"
-        path: "PRODUCT_STAR_RATING"
-      - header: "PROMOTION_TEXT"
-        path: "PROMOTION_TEXT"
       - header: "RETAILER_ID"
         path: "RETAILER_ID"
       - header: "RETAILER_NAME"
         path: "RETAILER_NAME"
-      - header: "SALES_PRICE"
-        path: "SALES_PRICE"
-      - header: "SCRAPE_INPUT_CATEGORY"
-        path: "SCRAPE_INPUT_CATEGORY"
-      - header: "SCRAPE_INPUT_SEARCH_TERM"
-        path: "SCRAPE_INPUT_SEARCH_TERM"
+      - header: "GEOGRAPHY_NAME"
+        path: "GEOGRAPHY_NAME"
       - header: "SCRAPE_INPUT_TYPE"
         path: "SCRAPE_INPUT_TYPE"
+      - header: "SCRAPE_INPUT_SEARCH_TERM"
+        path: "SCRAPE_INPUT_SEARCH_TERM"
+      - header: "SCRAPE_INPUT_CATEGORY"
+        path: "SCRAPE_INPUT_CATEGORY"
       - header: "SCRAPE_URL_NBR_PRODUCTS"
         path: "SCRAPE_URL_NBR_PRODUCTS"
       - header: "SCRAPE_URL_NBR_PROD_PG1"
         path: "SCRAPE_URL_NBR_PROD_PG1"
-      - header: "_collection"
-        path: "_collection"
-      - header: "_created_at"
-        path: "_created_at"
-      - header: "_gid"
-        path: "_gid"
-      - header: "_id"
-        path: "_id"
-      - header: "_job_id"
-        path: "_job_id"
+      - header: "PRODUCT_BRAND"
+        path: "PRODUCT_BRAND"
+      - header: "PRODUCT_RANK"
+        path: "PRODUCT_RANK"
+      - header: "PRODUCT_PAGE"
+        path: "PRODUCT_PAGE"
+      - header: "PRODUCT_ID"
+        path: "PRODUCT_ID"
+      - header: "UPC"
+        path: "UPC"
+      - header: "EAN"
+        path: "EAN"
+      - header: "PRODUCT_NAME"
+        path: "PRODUCT_NAME"
+      - header: "PRODUCT_DESCRIPTION"
+        path: "PRODUCT_DESCRIPTION"
+      - header: "PRODUCT_MAIN_IMAGE_URL"
+        path: "PRODUCT_MAIN_IMAGE_URL"
+      - header: "PRODUCT_ITEM_SIZE"
+        path: "PRODUCT_ITEM_SIZE"
+      - header: "PRODUCT_ITEM_SIZE_UOM"
+        path: "PRODUCT_ITEM_SIZE_UOM"
+      - header: "PRODUCT_ITEM_QTY_IN_PACK"
+        path: "PRODUCT_ITEM_QTY_IN_PACK"
+      - header: "PRODUCT_STAR_RATING"
+        path: "PRODUCT_STAR_RATING"
+      - header: "PRODUCT_NBR_OF_REVIEWS"
+        path: "PRODUCT_NBR_OF_REVIEWS"
+      - header: "SALES_PRICE"
+        path: "SALES_PRICE"
+      - header: "IS_AVAILABLE"
+        path: "IS_AVAILABLE"
+      - header: "PROMOTION_TEXT"
+        path: "PROMOTION_TEXT"
+      - header: "EXTRACTED_ON"
+        path: "EXTRACTED_ON"
